cluster/apps/flux-system/webhook-receiver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: webhook-receiver-tls
      hosts:
        - flux-webhook.${SECRET_DOMAIN}
  rules:
  - host: flux-webhook.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 443
